NGSTACK-639 - align breadcrumbs, fix small screen size style

--- a/assets/sass/layout/_breadcrumbs.scss
+++ b/assets/sass/layout/_breadcrumbs.scss
@@ -46,11 +46,14 @@
         &.breadcrumb-item--no-link {
             display: none;
             &:last-child {
-                display: inline-block;
+                display: flex;
+                align-items: center;
                 width: 350px;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
+                span {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
                 @include media-breakpoint-down(sm) {
                     display: none;
                 }
@@ -71,10 +74,16 @@
         &.breadcrumb-item {
             @include media-breakpoint-down(md) {
                 padding-left: 2rem;
-            }
-            &:before {
-                @extend %fontawesome;
-                @include media-breakpoint-down(md) {
+                &:before {
+                    -moz-osx-font-smoothing: grayscale;
+                    -webkit-font-smoothing: antialiased;
+                    display: inline-block;
+                    font-style: normal;
+                    font-variant: normal;
+                    text-rendering: auto;
+                    line-height: 1;
+                    font-family: 'Font Awesome 5 Free';
+                    font-weight: 900;
                     display: block;
                     color: inherit;
                     content: "\f053";
